--- a/package.json
+++ b/package.json
@@ -23,13 +23,9 @@
         "@vue/compiler-sfc": "^3.0.0-0",
         "axios": "^0.20.0",
         "babel-eslint": "^10.1.0",
-        "cross-env": "^7.0.2",
         "eslint": "^6.7.2",
         "eslint-plugin-vue": "^7.0.0-0",
         "jquery": "^3.5.1",
-        "lodash": "^4.17.20",
-        "popper.js": "^1.16.1",
-        "resolve-url-loader": "^3.1.1",
-        "vue-template-compiler": "^2.6.12"
+        "lodash": "^4.17.20"
     }
 }
